fixed an issue where resources were not found, when the application did not start from the index

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <title>Ochre Tags Editor</title>
 
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
 
-        <script src="assets/bin/index.js"></script>
+        <script src="/assets/bin/index.js"></script>
     </div>
 </body>
 </html>
